<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CEECF5"
    tools:context=".BalneariosActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/balne"
                android:textSize="30dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/estacas" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/estacas"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/desEsta"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center"
                android:text="@string/conteDes"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/direEstacas"
                android:fontFamily="cursive"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="10dp"/>


            <ImageView
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="220dp"
                android:src="@drawable/positas" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/positas"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/desPositas"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center"
                android:text="@string/conteDesPo"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/direPos"
                android:fontFamily="cursive"
                android:gravity="center"
                android:textSize="10dp"/>

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="220dp"
                android:src="@drawable/sauces" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sauces"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/desSacuces"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center"
                android:text="@string/conteDesSau"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/direSauce"
                android:fontFamily="cursive"
                android:gravity="center"
                android:textSize="10dp"/>

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="220dp"
                android:src="@drawable/rollo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/rollo"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/desSacuces"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center"
                android:text="@string/conteDesRollo"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/direRollo"
                android:fontFamily="cursive"
                android:gravity="center"
                android:textSize="10dp"/>

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="220dp"
                android:src="@drawable/huertas" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/hertas"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/desSacuces"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center"
                android:text="@string/conteDesHuertas"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/direHuertas"
                android:fontFamily="cursive"
                android:gravity="center"
                android:textSize="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>