<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MuseoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/muse"
                android:textSize="30dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="220dp"
                android:src="@drawable/meseo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/cuarte"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/desEsta"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center"
                android:text="@string/conteDesCuar"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/direCuatel"
                android:gravity="center"
                android:fontFamily="cursive"
                android:textSize="10dp"/>


            <ImageView
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="220dp"
                android:src="@drawable/ojito" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/manantial"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/desPositas"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center"
                android:text="@string/conteDesManatial"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/direManantial"
                android:fontFamily="cursive"
                android:gravity="center"
                android:textSize="10dp"/>


            <ImageView
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="220dp"
                android:src="@drawable/tetelpa" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/tetelpa"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/desPositas"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center"
                android:text="@string/conteDesTetelpa"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/direTetelpa"
                android:gravity="center"
                android:fontFamily="cursive"
                android:textSize="10dp"/>

            <ImageView
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="220dp"
                android:src="@drawable/chinameca" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/china"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/desPositas"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center"
                android:text="@string/conteDesChina"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/direChina"
                android:gravity="center"
                android:fontFamily="cursive"
                android:textSize="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>